--- a/src/components/Collections.astro
+++ b/src/components/Collections.astro
@@ -64,7 +64,7 @@ const collections = [
       {collections.map((col, index) => (
         <a href={col.link} class="group relative flex-none w-[85vw] sm:w-[60vw] md:w-[40vw] lg:w-[28vw] aspect-[3/4] snap-start overflow-hidden rounded-sm bg-[#111] collection-card cursor-none">
           
-          <DistortedImage url={col.img} client:visible />
+          <DistortedImage url={col.img} client:load />
           
           <div class="absolute inset-0 z-10 bg-gradient-to-t from-[var(--color-noir)] via-[var(--color-noir)]/40 to-transparent opacity-80 group-hover:opacity-90 transition-opacity duration-500 pointer-events-none"></div>
           
