--- a/src/components/Collections.astro
+++ b/src/components/Collections.astro
@@ -6,31 +6,31 @@ const collections = [
   {
     title: "Madera Noble",
     desc: "Roble, nogal o cerezo. El clasicismo atemporal para bodegas tradicionales.",
-    img: "/images/collections/new-madera-noble.jpg",
+    img: "/images/collections/madera-noble.png",
     link: "#"
   },
   {
     title: "Acero y Cristal",
     desc: "Líneas puras y transparencia absoluta. Vanguardia arquitectónica.",
-    img: "/images/collections/new-acero-cristal.jpg",
+    img: "/images/collections/acero-cristal.png",
     link: "#"
   },
   {
     title: "Bajo Escalera",
     desc: "Aprovechamiento magistral del espacio con estética impecable.",
-    img: "/images/collections/new-bajo-escalera.jpg",
+    img: "/images/collections/bajo-escalera.png",
     link: "#"
   },
   {
     title: "A Medida",
     desc: "Integración total en mobiliario existente. Sin límites de diseño.",
-    img: "/images/collections/new-a-medida.jpg",
+    img: "/images/collections/a-medida.png",
     link: "#"
   },
   {
     title: "Puros & Jamoneras",
     desc: "Las mismas condiciones de excelencia adaptadas a otros placeres.",
-    img: "/images/collections/new-puros.jpg",
+    img: "/images/collections/puros.png",
     link: "#"
   }
 ];
