--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -2,7 +2,7 @@
 // src/components/Philosophy.astro
 import MeshGradient from './MeshGradient';
 ---
-<section id="filosofia" class="bg-[var(--color-noir)] relative overflow-hidden flex flex-col items-center justify-center min-h-[140vh] w-full py-24">
+<section id="filosofia" class="bg-[var(--color-noir)] relative overflow-hidden flex flex-col items-center justify-center min-h-screen w-full py-24">
   
   <div class="sticky top-0 h-screen w-full flex items-center justify-center overflow-hidden">
     
